# big_echo

./: .gitignore  package-lock.json  package.json  tsconfig.json
dmg-assets/: README.md  (+1 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/macos/MinitrayBridge/: Package.swift
src-tauri/macos/SystemAudioBridge/: Package.swift
src-tauri/src/: app_state.rs  command_core.rs  hotkey_manager.rs  lib.rs  main.rs  tray_manager.rs  window_manager.rs
src-tauri/src/audio/: capture.rs  file_writer.rs  macos_system_audio.rs  mod.rs  opus_writer.rs
src-tauri/src/commands/: apple_speech.rs  brain_sync.rs  mod.rs  nexara.rs  recording.rs  sessions.rs  settings.rs  task_sync.rs  updates.rs  yandex_sync.rs
src-tauri/src/domain/: session.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/services/: apple_speech.rs  minitray.rs  mod.rs  pipeline_runner.rs
src-tauri/src/services/brain_server/: client.rs  error.rs  lease.rs  mime.rs  mod.rs  state.rs  upload.rs
src-tauri/src/services/yandex_disk/: client.rs  mod.rs  runner.rs  scheduler.rs  share.rs  state.rs  sync_runner.rs
src-tauri/src/settings/: mod.rs  public_settings.rs  secret_store.rs  token_validation.rs
src-tauri/src/storage/: fs_layout.rs  markdown_artifact.rs  mod.rs  session_store.rs  sqlite_repo.rs  tag_index.rs
src-tauri/src/task_sync/: extractor.rs  mod.rs  model.rs  normalizer.rs  queue.rs  snapshot.rs  todoist.rs  worker.rs
src-tauri/tests/: asset_protocol_config_integration.rs  command_flow_integration.rs
(+135 files in other folders)
