[package]
name = "bigecho"
version = "1.3.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ogg = "0.9"
opus = "0.3"
cpal = "0.16"
tauri-plugin-global-shortcut = "2"
base64 = "0.22"
sha2 = "0.10"
swift-rs = "1.0.7"

[features]
default = []

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
